Completed data retrieval to present details
Signed-off-by: Juan Daniel Ozuna Espinal <juandanielozuna2@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 30
@@ -9,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.juan.bravoTest"
 
-        minSdkVersion 25
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -17,10 +18,20 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
     buildTypes {
         debug {
-            buildConfigField("String", "API_URL", "https://api.themoviedb.org/3/")
-            buildConfigField("String", "API_TOKEN", "eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxY2Y1NWIyNTBmYzAxM2QzZTE2ZTc4M2JiNWRiMjc0MCIsInN1YiI6IjYwN2M4ZDQ2Nzc3NmYwMDAzZjY3M2Y2MSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.OYeqj3RqqCvparPWb0q2mqO4FaWG_HpsyC3ZmczV0UI")
+            buildConfigField("String", "API_URL", "\"https://api.themoviedb.org/3/\"")
+            buildConfigField("String", "IMAGE_URL", "\"https://image.tmdb.org/t/p/\"")
+            buildConfigField("String", "API_TOKEN", "\"eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxY2Y1NWIyNTBmYzAxM2QzZTE2ZTc4M2JiNWRiMjc0MCIsInN1YiI6IjYwN2M4ZDQ2Nzc3NmYwMDAzZjY3M2Y2MSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.OYeqj3RqqCvparPWb0q2mqO4FaWG_HpsyC3ZmczV0UI\"")
         }
         release {
             minifyEnabled false
@@ -50,5 +61,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 }
